manifests/auth-provider/overlays/integration/patch-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  template:
    spec:
      containers:
        - name: backend
          command:
            [
              "./bin/rails",
              "server",
              "-b",
              "0.0.0.0",
              "-p",
              "3000",
              "-e",
              "integration",
            ]
