manifests/auth-provider/overlays/integration/patch-backend-migrate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-migrate-deployment
spec:
  template:
    spec:
      containers:
        - name: backend-migrate
          command:
            [
              "/bin/sh",
              "-c",
              "RAILS_ENV=integration rails db:create && \\
              RAILS_ENV=integration rails db:migrate && \\
              ./bin/rails server -b 0.0.0.0 -p 3000 -e integration",
            ]
