manifests/auth-provider/overlays/integration/patch-backend-migrate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-migrate-deployment
  namespace: auth-provider-integration
  labels:
    app: auth-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-provider
      server: backend-migrate
  template:
    metadata:
      labels:
        app: auth-provider
        server: backend-migrate
    spec:
      containers:
        - name: backend-migrate
          image: docker-registry.kuroweb.net/auth-provider-backend:placeholder
          command: [
              "/bin/sh",
              "-c",
              "RAILS_ENV=integration rails db:create && \
              RAILS_ENV=integration rails db:migrate && \
              ./bin/rails server -b 0.0.0.0 -p 3000 -e integration",
            ]
          volumeMounts:
            - name: op-private-key
              mountPath: /app/certs/private.pem
              subPath: OP_PRIVATE_KEY
              readOnly: true
      volumes:
        - name: op-private-key
          secret:
            secretName: backend-secret
