manifests/auth-provider/overlays/integration/patch-backend-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-redis-service
  namespace: auth-provider-integration
spec:
  selector:
    app: auth-provider
    server: backend-redis
  type: LoadBalancer
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
  loadBalancerIP: 10.15.100.236

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-redis-deployment
  namespace: auth-provider-integration
  labels:
    app: auth-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-provider
      server: backend-redis
  template:
    metadata:
      labels:
        app: auth-provider
        server: backend-redis
    spec:
      containers:
        - name: backend-redis
          image: redis
          args: ["--appendonly", "yes"]
          ports:
            - name: redis
              containerPort: 6379
          volumeMounts:
            - name: backend-redis-storage
              mountPath: /data
      volumes:
        - name: backend-redis-storage
          persistentVolumeClaim:
            claimName: backend-redis-storage
      securityContext:
        fsGroup: 999
