manifests/auth-provider/overlays/integration/patch-loadbalancer-ips.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  loadBalancerIP: 10.15.100.234

---
apiVersion: v1
kind: Service
metadata:
  name: backend-db-service
spec:
  loadBalancerIP: 10.15.100.235

---
apiVersion: v1
kind: Service
metadata:
  name: backend-redis-service
spec:
  loadBalancerIP: 10.15.100.236
