manifests/auth-provider/overlays/integration/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: auth-provider-integration
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - integration.auth-provider.kuroweb.net
        - www.integration.auth-provider.kuroweb.net
      secretName: ingress-cert
  rules:
    - host: integration.auth-provider.kuroweb.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
